# eventsim-rs

./: .gitignore  Cargo.toml  Makefile  README.md  api.md  getting-started.md  introduction.md  plan.md  research-plan.md  run-research.sh
.githooks/: pre-commit
src/: lib.rs
src/context/: chronosystem.rs  effects.rs  exosystem.rs  macrosystem.rs  mesosystem.rs  mod.rs
src/entity/: entity.rs  entity_builder.rs  mod.rs
src/enums/: alert_severity.rs  alert_trigger.rs  attribution.rs  birth_era.rs  bond_type.rs  context_path.rs  developmental_category.rs  emotion.rs  event_payload.rs  event_scope.rs  event_type.rs  life_stage.rs  mod.rs  personality_profile.rs  rel_path.rs  relationship_schema.rs  reversibility.rs  species.rs  state_path.rs  subsystem_id.rs
src/event/: event.rs  event_builder.rs  event_bus.rs  event_spec.rs  mod.rs  salience.rs
src/memory/: consolidation.rs  deltas.rs  emotional_snapshot.rs  event_tags.rs  from_event.rs  layers.rs  maintenance.rs  memory_entry.rs  mod.rs  source.rs  tags.rs
src/processor/: alerts.rs  decay.rs  developmental.rs  emotions.rs  event.rs  feedback.rs  its.rs  its_contributors.rs  mod.rs  reversibility.rs  state_evolution.rs
src/relationship/: antecedent.rs  antecedent_mapping.rs  directional_dimensions.rs  interaction_pattern.rs  mod.rs  perceived_risk.rs  predictions.rs  relationship.rs  shared_dimensions.rs  stage.rs  trust.rs  trust_context.rs  trust_decision.rs  trustworthiness.rs
src/simulation/: mod.rs  simulation.rs  simulation_builder.rs  state_query.rs
tests/: longitudinal.rs  simulation.rs
(+165 files in other folders)
