[package]
name = "eventsim-rs"
version = "0.7.0"
edition = "2021"
description = "Domain-agnostic specification for modeling individual psychology and social dynamics"
license = "MIT OR Apache-2.0"
authors = ["Scott Laurent"]
repository = "https://github.com/behavioralpathways/eventsim-rs"
publish = true

[dependencies]
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
